kubernetes/db-deployment.sample.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: $DB_DEPLOYMENT_REPLICAS
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        image: $DB_DEPLOYMENT_IMAGE
        name: db
        resources: {}
        volumeMounts:
        - mountPath: $DB_DEPLOYMENT_MOUNT_PATH
          name: db
      restartPolicy: Always
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db
status: {}
