kubernetes/portal-deployment.sample.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: portal
  name: portal
spec:
  replicas: $PORTAL_DEPLOYMENT_REPLICAS
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: portal
    spec:
      containers:
      - command: ["./server.sh"]
        image: $PORTAL_DEPLOYMENT_IMAGE
        name: portal
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: $PORTAL_DEPLOYMENT_MOUNT_PATH
          name: job-files
      restartPolicy: Always
      volumes:
      - name: job-files
        persistentVolumeClaim:
          claimName: job-files
status: {}
