kubernetes/runner-worker-deployment.sample.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: runner-worker
  name: runner-worker
spec:
  replicas: $RUNNER_WORKER_DEPLOYMENT_REPLICAS
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: runner-worker
    spec:
      containers:
      - command: ["./celery.sh"]
        image: $RUNNER_WORKER_DEPLOYMENT_IMAGE
        name: runner-worker
        resources: {}
        volumeMounts:
        - mountPath: $RUNNER_WORKER_DEPLOYMENT_MOUNT_PATH
          name: job-files
      restartPolicy: Always
      volumes:
      - name: job-files
        persistentVolumeClaim:
          claimName: job-files
status: {}
