kubernetes/portal-service.sample.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: portal
  name: portal
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    io.kompose.service: portal
status:
  loadBalancer: {}
