kubernetes/runner-worker-service.sample.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: runner-worker
  name: runner-worker
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: runner-worker
status:
  loadBalancer: {}
