kubernetes/portal-route.sample.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: portal
  namespace: privascope-portal
spec:
  host: $PORTAL_ROUTE_HOST
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: portal
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
